apps/keycloak/overlays/local/patches/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-local
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "X-Forwarded-Proto"
                value: "https" # Faken dat het via HTTPS binnenkwam
      backendRefs:
        - name: keycloak-service # Vul hier de naam van de Keycloak ClusterIP Service in
          port: 8080
  hostnames:
    - "keycloak.wigo4it.nl"
